feat: add some easy problems

--- a/main.tex
+++ b/main.tex
@@ -42,18 +42,21 @@
 
 \title{مبانی کامپیوتر و برنامه‌نویسی}
 \author{پرهام الوانی}
-\date{۵ تیر ۱۴۰۰}
+\date{۱۶ اسفند ۱۴۰۰}
 \university{دانشگاه صنعتی امیرکبیر}
-\exam{آزمون پایانی}
-\semester{نیم سال دوم ۱۳۹۹-۱۴۰۰}
-\duration{۱۲۰}
+\exam{دستگرمی}
+\semester{نیم سال دوم ۱۴۰۰-۱۴۰۱}
+\duration{۶۰}
 
 \begin{document}
   \maketitle
   \tableofcontents
   \pagebreak
 
-  \subfile{basketball/main.tex}
+  \subfile{is-square/main.tex}
+  \subfile{is-2-n/main.tex}
+  \subfile{print-digits/main.tex}
+
   \vspace*{\fill}
   \begin{center}
 این سند برپایه بسته \متن‌لاتین{\زی‌پرشین} گونه \متن‌لاتین{\گونه‌زی‌پرشین} توسعه پیدا کرده است.
