--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,8 @@
   \subfile{is-square/main.tex}
   \subfile{is-2-n/main.tex}
   \subfile{print-digits/main.tex}
+  \subfile{pythagoras/main.tex}
+  \subfile{coca-cola/main.tex}
 
   \vspace*{\fill}
   \begin{center}
