feat: update problem description.

--- a/is-square/main.tex
+++ b/is-square/main.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \قسمت{آیا مربع است؟}
 
-چهار نقطه که هیچ سه نقطه‌ای از آن‌ها روی یک خط راست نیستند به صورت ساعتگرد در صفحه‌ی دو بعدی به شما داده می‌شود.
+چهار نقطه که هیچ سه نقطه‌ای از آن‌ها روی یک خط راست نیستند به صورت ساعتگرد و از گوشه سمت چپ بالا، در صفحه‌ی دو بعدی به شما داده می‌شود.
 برنامه‌ای بنویسید که با دریافت مختصات این نقاط مشخص کند که این نقاط تشکیل مربع می‌دهند یا خیر.
 
 \begin{latin}
