feat: update vazir font name

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 }
 
 \usepackage[localise]{xepersian}
-\settextfont{Vazir}
+\settextfont{Vazirmatn}
 \setlatintextfont{Roboto}
 
 % for listing environments
