feat: ready for midterm.

--- a/main.tex
+++ b/main.tex
@@ -42,22 +42,18 @@
 
 \title{مبانی کامپیوتر و برنامه‌نویسی}
 \author{پرهام الوانی}
-\date{۱۶ اسفند ۱۴۰۰}
+\date{۱۸ فروردین ۱۴۰۱}
 \university{دانشگاه صنعتی امیرکبیر}
-\exam{دستگرمی}
+\exam{میان‌ترم}
 \semester{نیم سال دوم ۱۴۰۰-۱۴۰۱}
-\duration{۶۰}
+\duration{دو روز}
 
 \begin{document}
   \maketitle
   \tableofcontents
   \pagebreak
 
-  \subfile{is-square/main.tex}
-  \subfile{is-2-n/main.tex}
-  \subfile{print-digits/main.tex}
-  \subfile{pythagoras/main.tex}
-  \subfile{coca-cola/main.tex}
+  \subfile{basketball/main}
 
   \vspace*{\fill}
   \begin{center}
