feat: update midterm exam.

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -13,24 +13,24 @@
 \زیرقسمت{در مورد شبیه‌ساز}
 
 روش کار این شبیه‌ساز به این صورت است که تعدادی تیم در مسابقه وجود دارند (تیم‌ها ویژگی خاصی ندارد و با ترتیب ورودشان از هم جدا می‌شوند)
-و بازی می‌کنند و به صورت تصادفی برنده مشخص می‌شود و تعدادی کاربر روی برد این تیم‌ها پیش‌بینی می‌کنند.
-در صورتی که تیمی که کاربر روی آن پیش‌بینی کرده \متن‌سیاه{قهرمان} شود، وی برنده می‌شود.
+و با یکدیگر بازی می‌کنند و به صورت تصادفی در هر بازی برنده مشخص می‌شود و تعدادی کاربر برد این تیم‌ها را پیش‌بینی می‌کنند.
+در صورتی که تیمی که کاربر آن را قهرمان پیش‌بینی کرده است، \متن‌سیاه{قهرمان} شود، وی برنده می‌شود.
 
-کاربر تعداد تیم‌های داخل بازی را یکی یکی در شبیه‌ساز اضافه می‌کند
-سپس کاربر، پیش‌بینی افراد متفاوتی را با \متن‌سیاه{کدملی}های مختلف در ورودی وارد می‌کند.
+کاربر تیم‌های داخل بازی را یکی یکی در شبیه‌ساز اضافه می‌کند
+سپس کاربر، پیش‌بینی افراد متفاوتی را با \متن‌سیاه{کدملی}های آن افراد در ورودی وارد می‌کند.
 هر فرد (که با کدملی شناخته می‌شود) می‌تواند حداکثر 2 پیش‌بینی انجام دهد،
-یعنی بگوید تیم \متن‌لاتین{X} برنده می‌شود یا تیم \متن‌لاتین{Y}.
+یعنی بگوید تیم \متن‌لاتین{X} قهرمان می‌شود یا تیم \متن‌لاتین{Y}.
 
 در نهایت بعد از وارد شدن اطلاعات تیم‌ها و افراد پیش‌بینی کننده، با درخواست کاربر، شبیه‌سازی انجام می‌شود و
-ازی بین دو به دوی تیم‌ها برگزار می‌کند.
+بازی‌ها بین دو به دوی تیم‌ها برگزار می‌شود.
 این بازی‌ها به صورت
 \متن‌سیاه{امتیازی و یک طرفه}
 بوده و احتمال برد هر تیم‌، یکسان و برابر با
 \(\frac{1}{2}\)
 است. 
-(دقت کنید که حالت مساوی نداریم و حتما یک تیم برنده می‌شود و یک تیم بازنده.)
+(دقت کنید که حالت مساوی نداریم و حتما یک تیم برنده می‌شود و یک تیم بازنده)
 امتیاز تیم برنده برابر با ۱ و تیم بازنده برابر با صفر خواهد بود.
-روند بازی‌ها برای چهار تیم به شکل زیر خواهد بود:
+روند بازی‌ها برای چهار تیم با شماره‌های ۰ تا ۳ به شکل زیر خواهد بود:
 
 \begin{latin}
 \begin{lstlisting}[]
