--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 \university{دانشگاه صنعتی امیرکبیر}
 \exam{میان‌ترم}
 \semester{نیم سال دوم ۱۴۰۰-۱۴۰۱}
-\duration{دو روز}
+\duration{---}
 
 \begin{document}
   \maketitle
