feat: update basketball problem.

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -2,13 +2,11 @@
 
 \begin{document}
 
-\قسمت{شبیه‌سازی بسکتبال خیابان}
+\قسمت{شبیه‌سازی مسابقات بسکتبال}
 
 \زیرقسمت{مقدمه}
 
-رها پیش‌بینی مسابقات بسکتبال خیابانی را دوست دارد، محمدحسن و پرهام این بازی را دنبال می‌کنند اما می‌خواهند رها را خوشحال کنند
-برای این کار تصمیم می‌گیرند یک شبیه‌ساز برای پیش‌بینی‌ این بازی بنویسند تا رها بتواند با آن بازی کند.
-پرهام و محمدحسن که مشغول پروژه‌های شخصی هستند، این فرصت را به شما می‌دهند که به عنوان امتحان میان‌ترم، این شبیه‌سازی را پیاده‌سازی کنید.
+در این پروژه قصد داریم شبیه‌سازی را برای مسابقات بسکتبال پیاده‌سازی کنیم.
 
 \زیرقسمت{در مورد شبیه‌ساز}
 
