feat: update basketball problem.

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -7,11 +7,15 @@
 \زیرقسمت{مقدمه}
 
 در این پروژه قصد داریم شبیه‌سازی را برای مسابقات بسکتبال پیاده‌سازی کنیم.
+این شبیه‌ساز، بازی بین تعدادی تیم را شبیه‌سازی کرده و به صورت تصادفی برنده را در
+هر بازی انتخاب می‌کند و در نهایت قهرمان جام را مشخص می‌کند.
+از سوی دیگر افراد می‌توانند قهرمان جام را پیش‌بینی کرده و در نهایت اگر پیش‌بینی آن‌ها
+درست باشد برنده خواهند شد.
 
 \زیرقسمت{در مورد شبیه‌ساز}
 
-روش کار این شبیه‌ساز به این صورت است که تعدادی تیم در مسابقه وجود دارند (تیم‌ها ویژگی خاصی ندارد و با ترتیب ورودشان از هم جدا می‌شوند)
-و با یکدیگر بازی می‌کنند و به صورت تصادفی در هر بازی برنده مشخص می‌شود و تعدادی کاربر برد این تیم‌ها را پیش‌بینی می‌کنند.
+روش کار این شبیه‌ساز به این صورت است که تعدادی تیم در مسابقه وجود دارند (تیم‌ها ویژگی خاصی ندارد و تنها با ترتیب ورودشان از هم جدا می‌شوند)
+و با یکدیگر بازی می‌کنند و به صورت تصادفی در هر بازی برنده مشخص می‌شود. تعدادی کاربر قهرمانی این تیم‌ها را پیش‌بینی می‌کنند.
 در صورتی که تیمی که کاربر آن را قهرمان پیش‌بینی کرده است، \متن‌سیاه{قهرمان} شود، وی برنده می‌شود.
 
 کاربر تیم‌های داخل بازی را یکی یکی در شبیه‌ساز اضافه می‌کند
@@ -22,7 +26,7 @@
 در نهایت بعد از وارد شدن اطلاعات تیم‌ها و افراد پیش‌بینی کننده، با درخواست کاربر، شبیه‌سازی انجام می‌شود و
 بازی‌ها بین دو به دوی تیم‌ها برگزار می‌شود.
 این بازی‌ها به صورت
-\متن‌سیاه{امتیازی و یک طرفه}
+\متن‌سیاه{امتیازی و دو طرفه}
 بوده و احتمال برد هر تیم‌، یکسان و برابر با
 \(\frac{1}{2}\)
 است. 
