feat: update basketball problem description

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -26,7 +26,7 @@
 در نهایت بعد از وارد شدن اطلاعات تیم‌ها و افراد پیش‌بینی کننده، با درخواست کاربر، شبیه‌سازی انجام می‌شود و
 بازی‌ها بین دو به دوی تیم‌ها برگزار می‌شود.
 این بازی‌ها به صورت
-\متن‌سیاه{امتیازی و دو طرفه}
+\متن‌سیاه{امتیازی و یک طرفه}
 بوده و احتمال برد هر تیم‌، یکسان و برابر با
 \(\frac{1}{2}\)
 است. 
@@ -67,18 +67,18 @@
 
 \شروع{شمارش}
 \فقره \متن‌سیاه{عملیات افزودن تیم}: یک تیم به شمار تیم‌های موجود در شبیه‌سازی می‌افزاید.
-    برای تیم لازم نیست هیچ اطلاعات از کاربر گرفته‌شود. این عملیات خروجی خاصی ندارد.
+    برای تیم لازم نیست هیچ اطلاعاتی از کاربر گرفته‌شود. این عملیات خروجی خاصی ندارد.
 
-\فقره \متن‌سیاه{عملیات پیش‌بینی یک کاربر برای برد یک تیم}:
-    کاربر برنامه کدملی یک شخص را وارد می‌کند و در ادامه یک شماره یک تیم را وارد می‌کند
-    که در واقع فردی که کد ملی‌اش وارد شده پیش‌بینی می‌کند آن تیم برنده می‌شود.
-    یک کد ملی حداکثر می‌تواند دو پیش‌بینی داشته باشد
+\فقره \متن‌سیاه{عملیات پیش‌بینی یک کاربر برای قهرمانی یک تیم}:
+    کاربر برنامه کدملی یک شخص را وارد می‌کند و در ادامه شماره یک تیم را وارد می‌کند
+    که در واقع فردی که کد ملی‌اش وارد شده پیش‌بینی می‌کند آن تیم قهرمان می‌شود.
+    هر کد ملی حداکثر می‌تواند دو پیش‌بینی داشته باشد
     یعنی حداکثر ۲ بار می‌تواند از گزینه‌ی
     \متن‌لاتین{Vote for a Winner}
     استفاده کند.
 
 \فقره با انتخاب این گزینه شبیه‌ساز اجرا شده و به صورت تصادفی تیم‌ها برنده یا بازنده می‌شود
-    و در نهایت برنده لیگ گزارش می‌شود.
+    و در نهایت قهرمان لیگ گزارش می‌شود.
     همچنین شبیه‌ساز اعلام می‌کند چه کد ملی‌هایی پیش‌بینی صحیح داشتند و در نهایت برنامه خاتمه پیدا می‌کند.
 \پایان{شمارش}
 
@@ -87,7 +87,7 @@
 
 \زیرزیرقسمت{نمونه ورودی و خروجی}
 
-فرض کنید در اولین گام، کاربر اصلی ۴ تیم را وارد کنید یعنی از گزینه ۱ چهار بار استفاده کند:
+فرض کنید در اولین گام، کاربر اصلی ۴ تیم را وارد کند به این معنی که از گزینه ۱ چهار بار استفاده کند:
 
 \begin{latin}
 \begin{lstlisting}[]
@@ -228,8 +228,7 @@
 
 در نهایت با استفاده از گزینه ۳ شبیه‌سازی را اجرا می‌کنیم.
 با انتخاب این گزینه شبیه‌ساز اجرا شده و به صورت تصادفی تیم‌ها برنده یا بازنده می‌شود
-و در نهایت برنده لیگ گزارش می‌شود. همچنین شبیه‌ساز اعلام می‌کند چه کد ملی‌هایی پیش‌بینی صحیح داشتند
-و در نهایت برنامه خاتمه پیدا می‌کند.
+و در نهایت برنده لیگ گزارش می‌شود. همچنین شبیه‌ساز اعلام می‌کند چه کد ملی‌هایی پیش‌بینی صحیح داشتند.
 
 \begin{latin}
 \begin{lstlisting}[]
@@ -242,7 +241,8 @@
 \end{lstlisting}
 \end{latin}
 
-و برنامه به پایان می‌رسد. در پایان تیم برنده اعلام شده و امتیاز همه تیم‌ها لیست می‌شود. در صورتی که چند تیم امتیاز برابر داشته باشند به دلخواه یکی از آن‌ها برنده اعلام می‌شود.
+و برنامه به پایان می‌رسد. در پایان تیم برنده اعلام شده و امتیاز همه تیم‌ها لیست می‌شود. در صورتی که چند تیم امتیاز برابر داشته باشند
+تیمی که شناسه‌ی کوچک‌تری داشته است، قهرمان اعلام می‌شود.
 
 \زیرقسمت{نکات پیاده‌سازی}
 
