feat: update basketball problem.

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -82,7 +82,7 @@
     همچنین شبیه‌ساز اعلام می‌کند چه کد ملی‌هایی پیش‌بینی صحیح داشتند و در نهایت برنامه خاتمه پیدا می‌کند.
 \پایان{شمارش}
 
-\متن‌سیاه{برنامه شما باید بررسی کند کد ملی یک عدد حداکثر ۱۰ رقمی بوده و شماره تیم نیز در بازه تعداد تیم‌ها باشد}.
+\متن‌سیاه{برنامه شما باید بررسی کند کد ملی یک عدد دقیقا ۱۰ رقمی بوده و شماره تیم نیز در بازه تعداد تیم‌ها باشد}.
 بعد از انجام گزینه ۱ یا ۲ دوباره منو ابتدایی نمایش داده می‌شود.
 
 \زیرزیرقسمت{نمونه ورودی و خروجی}
@@ -134,7 +134,8 @@
 \end{lstlisting}
 \end{latin}
 
-در ادامه فرض کنید به اشتباه عدد ۵ (که در گزینه‌ها موجود نیست) را وارد کند:
+در ادامه فرض کنید به اشتباه عدد ۵ (که در گزینه‌ها موجود نیست) را وارد کند.
+در این شرایط خطایی نمایش داده شده و دوباره منو ابتدایی ظاهر می‌شود:
 
 \begin{latin}
 \begin{lstlisting}[]
@@ -148,7 +149,8 @@
 \end{lstlisting}
 \end{latin}
 
-در ادامه می‌خواهیم پیش‌بینی تیم برنده را انجام دهیم، برای اینکار گزینه‌ی ۲ را وارد می‌کنیم:
+در ادامه می‌خواهیم پیش‌بینی تیم برنده را انجام دهیم، برای اینکار گزینه‌ی ۲ را وارد می‌کنیم.
+برای انجام پیش‌بینی کد ملی فرد و شماره تیم مورد نظر از او گرفته شده و دوباره منو نمایش داده می‌شود.
 
 \begin{latin}
 \begin{lstlisting}[]
@@ -186,7 +188,7 @@
 \begin{lstlisting}[]
     ID: 0017784646
     Bet: 2
-    insertion failed
+    insertion failed because you have two bets already
     Welcome to our simulator
     [n_participants: 2] [n_teams: 4]
 
@@ -249,10 +251,10 @@
 \شروع{فقرات}
     \فقره تا جایی که می‌توانید برنامه‌ی خود را به توابع معنی‌دار بشکنید. بهتر است هر تابع یک کار معین را انجام دهد.
     \فقره تعداد شرکت‌کننده‌ها و تیم‌ها هر کدام حداکثر ۱۰۰ می‌باشد و تضمین می‌شود بیشتر از این تعداد نخواهند بود.
-    \فقره دقت کنید که کد ملیَ برنده‌ها باید به شکل صحیح (با صفرهای ابتدایی) چاپ شود. برای این موضوع در نظر داشته باشید که کد ملی با صفرهای ابتدایی دقیقا ۱۰ رقم است.
+    \فقره دقت کنید که کد ملی برنده‌ها باید به شکل صحیح (با صفرهای ابتدایی) چاپ شود. برای این موضوع در نظر داشته باشید که کد ملی با صفرهای ابتدایی دقیقا ۱۰ رقم است.
     \فقره برای نگهداری کد ملی از متغیر صحیح استفاده کنید و در نظر داشته باشید که کد ملی از نظر مقدار عددی بزرگ می‌باشد.
     \فقره برای پیاده‌سازی این پروژه تنها نیاز به آنچه \متن‌سیاه{تا انتهای توابع} بحث شده است دارید اما استفاده از تمام ویژگی‌های زبان سی آزاد می‌باشد.
-    \فقره در پیاده‌سازی این پروژه فقط از \متن‌سیاه{زبان سی} استفاده کنید. در صورتی که برنامه شما برای اجرا نیاز به تنظیمات خاصی دارد یک راهنما برای اجرای برنامه بنویسید در فایل زیپتان همراه برنامه ارسال کنید.
+    \فقره در پیاده‌سازی این پروژه فقط از \متن‌سیاه{زبان سی} استفاده کنید. در صورتی که برنامه شما برای اجرا نیاز به تنظیمات خاصی دارد یک راهنما برای اجرای برنامه بنویسید در فایل آرشیو نهایی همراه برنامه ارسال کنید.
     \فقره از آنجایی که این پروژه در قالب \متن‌سیاه{امتحان میانترم} می‌باشد از تغییر دادن صورت مساله یا انجام موارد خارج از موارد مطرح شده خودداری کنید.
 \پایان{فقرات}
 
