feat: improve basketball problem

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -134,7 +134,7 @@
 \end{lstlisting}
 \end{latin}
 
-در ادامه فرض کنید به اشتباه عدد ۵ (که در گزینه‌ها موجود نیست) را وارد کند.
+در ادامه فرض کنید کاربر به اشتباه عدد ۵ (که در گزینه‌ها موجود نیست) را وارد کند.
 در این شرایط خطایی نمایش داده شده و دوباره منو ابتدایی ظاهر می‌شود:
 
 \begin{latin}
@@ -149,7 +149,7 @@
 \end{lstlisting}
 \end{latin}
 
-در ادامه می‌خواهیم پیش‌بینی تیم برنده را انجام دهیم، برای اینکار گزینه‌ی ۲ را وارد می‌کنیم.
+در ادامه کاربر می‌خواهد پیش‌بینی تیم قهرمان را انجام دهد، برای اینکار گزینه‌ی ۲ را وارد می‌کند.
 برای انجام پیش‌بینی کد ملی فرد و شماره تیم مورد نظر از او گرفته شده و دوباره منو نمایش داده می‌شود.
 
 \begin{latin}
@@ -228,7 +228,7 @@
 \end{lstlisting}
 \end{latin}
 
-در نهایت با استفاده از گزینه ۳ شبیه‌سازی را اجرا می‌کنیم.
+در نهایت با استفاده از گزینه ۳ شبیه‌سازی را اجرا می‌شود.
 با انتخاب این گزینه شبیه‌ساز اجرا شده و به صورت تصادفی تیم‌ها برنده یا بازنده می‌شود
 و در نهایت برنده لیگ گزارش می‌شود. همچنین شبیه‌ساز اعلام می‌کند چه کد ملی‌هایی پیش‌بینی صحیح داشتند.
 
@@ -253,7 +253,7 @@
     \فقره تعداد شرکت‌کننده‌ها و تیم‌ها هر کدام حداکثر ۱۰۰ می‌باشد و تضمین می‌شود بیشتر از این تعداد نخواهند بود.
     \فقره دقت کنید که کد ملی برنده‌ها باید به شکل صحیح (با صفرهای ابتدایی) چاپ شود. برای این موضوع در نظر داشته باشید که کد ملی با صفرهای ابتدایی دقیقا ۱۰ رقم است.
     \فقره برای نگهداری کد ملی از متغیر صحیح استفاده کنید و در نظر داشته باشید که کد ملی از نظر مقدار عددی بزرگ می‌باشد.
-    \فقره برای پیاده‌سازی این پروژه تنها نیاز به آنچه \متن‌سیاه{تا انتهای توابع} بحث شده است دارید اما استفاده از تمام ویژگی‌های زبان سی آزاد می‌باشد.
+    \فقره برای پیاده‌سازی این پروژه تنها نیاز به آنچه \متن‌سیاه{تا انتهای تعریف و استفاده از توابع} بحث شده است دارید اما استفاده از تمام ویژگی‌های زبان سی آزاد می‌باشد.
     \فقره در پیاده‌سازی این پروژه فقط از \متن‌سیاه{زبان سی} استفاده کنید. در صورتی که برنامه شما برای اجرا نیاز به تنظیمات خاصی دارد یک راهنما برای اجرای برنامه بنویسید در فایل آرشیو نهایی همراه برنامه ارسال کنید.
     \فقره از آنجایی که این پروژه در قالب \متن‌سیاه{امتحان میانترم} می‌باشد از تغییر دادن صورت مساله یا انجام موارد خارج از موارد مطرح شده خودداری کنید.
 \پایان{فقرات}
