feat: update basketball problem description.

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -256,6 +256,7 @@
     \فقره برای پیاده‌سازی این پروژه تنها نیاز به آنچه \متن‌سیاه{تا انتهای تعریف و استفاده از توابع} بحث شده است دارید اما استفاده از تمام ویژگی‌های زبان سی آزاد می‌باشد.
     \فقره در پیاده‌سازی این پروژه فقط از \متن‌سیاه{زبان سی} استفاده کنید. در صورتی که برنامه شما برای اجرا نیاز به تنظیمات خاصی دارد یک راهنما برای اجرای برنامه بنویسید در فایل آرشیو نهایی همراه برنامه ارسال کنید.
     \فقره از آنجایی که این پروژه در قالب \متن‌سیاه{امتحان میانترم} می‌باشد از تغییر دادن صورت مساله یا انجام موارد خارج از موارد مطرح شده خودداری کنید.
+    \فقره در نظر داشته باشید از آنجایی که با رشته‌ها آشنا نیستید، ورودی‌هایی مانند $00012345678$ به شما داده نمی‌شود چرا که نمی‌توانید تعداد ارقام آن را به درستی شمارش کنید.
 \پایان{فقرات}
 
 \زیرقسمت{موارد امتیازی}
