feat: add new problems

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 
   \subfile{mini-max-sum/main}
   \subfile{printing-tokens/main}
+  \subfile{reverse-array/main}
 
   \vspace*{\fill}
   \begin{center}
