feat: add new problems

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{enumerate}
 \usepackage{geometry}
  \geometry{
  a4paper,
@@ -45,6 +46,8 @@
   \subfile{mini-max-sum/main}
   \subfile{printing-tokens/main}
   \subfile{reverse-array/main}
+  \subfile{boxes/main}
+  \subfile{period/main}
 
   \vspace*{\fill}
   \begin{center}
