feat: add new problems

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@
   \subfile{reverse-array/main}
   \subfile{boxes/main}
   \subfile{period/main}
+  \subfile{sorted-students/main}
 
   \vspace*{\fill}
   \begin{center}
