feat: add new problems

--- a/debug-2/main.tex
+++ b/debug-2/main.tex
@@ -7,7 +7,7 @@
 او مدعی است که این کد گاها برای بعضی از بارکدها به دلایل نامعلومی در هنگام اجرا بسته می‌شود.
 
 \begin{latin}
-\begin{minted}[bgcolor=LightGray]{c}
+\begin{minted}[]{c}
 int main() {
     char barcode[10];
     gets(barcode);
