--- a/debug-3/main.tex
+++ b/debug-3/main.tex
@@ -1,66 +1,64 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\section{درباره لیست پیوندی}
-\paragraph{}
-\begin{enumerate}
-    \item خروجی برنامه را ذکر کنید و دلیل تغییر قسمت before و after را بنویسید.
-    \item شکل کلی لینک لیست را رسم کنید و تغییر اعمال شده را با رنگ دیگری نمایش دهید.
-    \item چه اتفاقی برای نود سوم می‌افتد و برنامه‌نویس باید به چه نکاتی دقت کند؟ (صرفا توضیح دهید)
-    
-\end{enumerate}
+
+\قسمت{درباره لیست پیوندی}
+
+\شروع{شمارش}[ا -]
+    \فقره خروجی برنامه را ذکر کنید و دلیل تغییر قسمت \متن‌لاتین{before} و \متن‌لاتین{after} را بنویسید.
+    \فقره شکل کلی لینک لیست را رسم کنید و تغییر اعمال شده را با رنگ دیگری نمایش دهید.
+    \فقره چه اتفاقی برای نود سوم می‌افتد و برنامه‌نویس باید به چه نکاتی دقت کند؟ (صرفا توضیح دهید)
+\پایان{شمارش}
 
 \begin{latin}
-\begin{lstlisting}[language=c]
-    #include <stdio.h>
-    #include <stdlib.h>
+\begin{minted}{c}
+#include <stdio.h>
+#include <stdlib.h>
 
-    struct Node{
-        char data;
-        struct Node *next;
-    };
+struct Node{
+    char data;
+    struct Node *next;
+};
 
-    int main()
-    {
-        struct Node* n1 = malloc(sizeof(struct Node));
-        struct Node* n2 = malloc(sizeof(struct Node));
-        struct Node* n3 = malloc(sizeof(struct Node));
+int main()
+{
+    struct Node* n1 = malloc(sizeof(struct Node));
+    struct Node* n2 = malloc(sizeof(struct Node));
+    struct Node* n3 = malloc(sizeof(struct Node));
 
-        n1->data = 'a';
-        n1->next = n2;
+    n1->data = 'a';
+    n1->next = n2;
 
-        n2->data = 'b';
-        n2->next = n3;
+    n2->data = 'b';
+    n2->next = n3;
 
-        n3->data = 'c';
-        n3->next = NULL;
-        
-        printf("before\n");
+    n3->data = 'c';
+    n3->next = NULL;
 
-        struct Node *temp = n1;
-        while( temp != NULL){
-            printf("data: %c\n", temp->data);
-            temp = temp->next;
-        }
+    printf("before\n");
 
-        // the change
-        n1->next->next = NULL;
-
-
-        printf("after\n");
-        temp = n1;
-        while( temp != NULL){
-            printf("data: %c\n", temp->data);
-            temp = temp->next;
-        }
-
-        return 0;
+    struct Node *temp = n1;
+    while( temp != NULL){
+        printf("data: %c\n", temp->data);
+        temp = temp->next;
     }
-\end{lstlisting}
+
+    // the change
+    n1->next->next = NULL;
+
+
+    printf("after\n");
+    temp = n1;
+    while( temp != NULL){
+        printf("data: %c\n", temp->data);
+        temp = temp->next;
+    }
+
+    return 0;
+}
+\end{minted}
 \end{latin}
 
-
-\paragraph{}
-۶ نمره
+۲ نمره
 
 \end{document}
