--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{enumerate}
+\usepackage{subfiles}
 \usepackage{geometry}
  \geometry{
  a4paper,
@@ -24,11 +25,7 @@
 \settextfont{Vazirmatn}
 \setlatintextfont{Roboto}
 
-% for listing environments
-\colorlet{LightGray}{Gray!30!}
-
-\usepackage{subfiles}
-\usepackage{parhamExam}
+\usepackage{exam}
 
 \title{مبانی کامپیوتر و برنامه‌نویسی}
 \author{پرهام الوانی}
@@ -49,6 +46,7 @@
   \subfile{boxes/main}
   \subfile{period/main}
   \subfile{sorted-students/main}
+  \subfile{debug-3/main}
 
   \vspace*{\fill}
   \begin{center}
