feat: add new problems

--- a/debug-3/main.tex
+++ b/debug-3/main.tex
@@ -7,7 +7,7 @@
 \شروع{شمارش}[ا -]
     \فقره خروجی برنامه را ذکر کنید و دلیل تغییر قسمت \متن‌لاتین{before} و \متن‌لاتین{after} را بنویسید.
     \فقره شکل کلی لینک لیست را رسم کنید و تغییر اعمال شده را با رنگ دیگری نمایش دهید.
-    \فقره چه اتفاقی برای نود سوم می‌افتد و برنامه‌نویس باید به چه نکاتی دقت کند؟ (صرفا توضیح دهید)
+    \فقره چه اتفاقی برای گره سوم می‌افتد و برنامه‌نویس باید به چه نکاتی دقت کند؟ (صرفا توضیح دهید)
 \پایان{شمارش}
 
 \begin{latin}
