feat: change repository structure

--- a/main.tex
+++ b/main.tex
@@ -1,56 +1,30 @@
-\documentclass[]{article}
+\documentclass[]{exam}
 
-\usepackage{hyperref}
-\usepackage{import}
-\usepackage{listings}
-\usepackage{minted}
-\usepackage[dvipsnames]{xcolor}
-\usepackage{hyperref}
-\usepackage{graphicx}
-\usepackage{enumerate}
-\usepackage{subfiles}
-\usepackage{geometry}
- \geometry{
- a4paper,
- left=2.2cm,
- right=2.2cm,
- top=2.5cm,
- bottom=2.5cm
- }
+\عنوان{مبانی کامپیوتر و برنامه‌نویسی}
+\نویسنده{پرهام الوانی}
+\تاریخ{۲۱ خرداد ۱۴۰۱}
 
-% \usepackage[disable]{todonotes} % answers not showed
-\usepackage[draft]{todonotes}   % answers showed
+\جزئیات‌آزمون{
+  دانشگاه={دانشگاه صنعتی امیرکبیر},
+  نام={میان‌ترم},
+  ترم={نیم سال دوم ۱۴۰۰-۱۴۰۱},
+  زمان={۱۲۰}
+}
 
-\usepackage[localise]{xepersian}
-\settextfont{Vazirmatn}
-\setlatintextfont{Roboto}
+\شروع{نوشتار}
 
-\usepackage{exam}
+\عنوان‌ساز
+\فهرست‌مطالب
+\صفحه‌شکن
 
-\title{مبانی کامپیوتر و برنامه‌نویسی}
-\author{پرهام الوانی}
-\date{۲۴ فروردین ۱۴۰۱}
-\university{دانشگاه صنعتی امیرکبیر}
-\exam{میان‌ترم}
-\semester{نیم سال دوم ۱۴۰۰-۱۴۰۱}
-\duration{۱۲۰}
+\ورودی{mini-max-sum/main}
+\ورودی{printing-tokens/main}
+\ورودی{reverse-array/main}
+\ورودی{boxes/main}
+\ورودی{period/main}
+\ورودی{sorted-students/main}
+\ورودی{debug-3/main}
 
-\begin{document}
-  \maketitle
-  \tableofcontents
-  \pagebreak
+\پایان‌ساز
 
-  \subfile{mini-max-sum/main}
-  \subfile{printing-tokens/main}
-  \subfile{reverse-array/main}
-  \subfile{boxes/main}
-  \subfile{period/main}
-  \subfile{sorted-students/main}
-  \subfile{debug-3/main}
-
-  \vspace*{\fill}
-  \begin{center}
-این سند برپایه بسته \متن‌لاتین{\زی‌پرشین} گونه \متن‌لاتین{\گونه‌زی‌پرشین} توسعه پیدا کرده است.
-  \end{center}
-
-\end{document}
+\پایان{نوشتار}
