--- a/anagram/main.tex
+++ b/anagram/main.tex
@@ -1,49 +1,37 @@
-\documentclass[../main.tex]{subfiles}
+\قسمت{آیا آناگرام}
 
-\begin{document}
-\section{آیا آناگرام}
-\paragraph{}
 دو رشته آناگرام می‌باشند اگر حروف آن‌ها تنها جایگشتی از یکدیگر باشد.
 تابع زیر دو رشته که از حروف کوچک انگلیسی تشکیل شده‌اند را دریافت کرده و مشخص می‌کند
 آیا این دو رشته آناگرام می‌باشند یا خیر.
 در صورتی که دو رشته آناگرام باشند خروجی این تابع برابر با یک و در غیر این صورت برابر با صفر می‌باشد.
 
 \begin{latin}
-\begin{lstlisting}[language=c]
-    int is_anagram(char* s1, char* s2) {
-        // your code goes here
-    }
-\end{lstlisting}
+\begin{minted}{c}
+int is_anagram(char* s1, char* s2) {
+    // your code goes here
+}
+\end{minted}
 \end{latin}
 
 برای درک بهتر از عملکرد تابع به مثال‌های زیر توجه کنید:
 
 \begin{latin}
-\begin{verbatim}
+\begin{minted}{output}
     Input: eat tea
     Output: 1
-\end{verbatim}
 
-\begin{verbatim}
     Input: dad day
     Output: 0
-\end{verbatim}
 
-\begin{verbatim}
     Input: bob boo
     Output: 0
-\end{verbatim}
 
-\begin{verbatim}
     Input: eat ate
     Output: 1
-\end{verbatim}
+\end{minted}
 \end{latin}
 
-\paragraph{راهنمایی}
+\متن‌سیاه{راهنمایی.}
 تعداد حروف کوچک انگلیسی برابر با ۲۶ می‌باشد.
 
-\paragraph{}
 ۴ نمره
-
-\end{document}
